--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
 
@@ -16,15 +17,16 @@
         <div class="container">
             <div class="nav-main">
                 <div class="logo">
-                    <a href="#">MoGo</a>
+                    <a href="#">MoGooo</a>
                 </div>
                 <div class="menu">
+                    <i class="fa-solid fa-bars menu-icon"></i>
                     <ul>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Service</a></li>
-                        <li><a href="#">Work</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#service">Service</a></li>
+                        <li><a href="#team">Team</a></li>
+                        <li><a href="#work">Work</a></li>
+                        <li><a href="#footer">Blog</a></li>
                     </ul>
                 </div>
             </div>
@@ -43,7 +45,7 @@
                         to MoGo</h1>
                     <div class="shape"></div>
                     <div class="banner-btn">
-                        <p>Learn more</p>
+                        <a>Learn more</a>
                     </div>
                 </div>
             </div>
@@ -80,7 +82,7 @@
                         <h5>super team</h5>
                     </div>
                 </div>
-                <div class="about-item m-r">
+                <div class="about-item">
                     <img src="image/about3.jpg" alt="">
                     <div class="about-over">
                         <div class="user">
@@ -221,14 +223,16 @@
             </div>
             <div class="team-main">
                 <div class="team-item">
-                    <img src="image/team1.jpg" alt="">
-                    <div class="team-over">
-                        <ul>
-                            <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-pinterest-p"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                        </ul>
+                    <div class="team-inner">
+                        <img src="image/team1.jpg" alt="">
+                        <div class="team-over">
+                            <ul>
+                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-pinterest-p"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="team-text">
                         <h5>Matthew Dix</h5>
@@ -236,29 +240,33 @@
                     </div>
                 </div>
                 <div class="team-item">
-                    <img src="image/team2.jpg" alt="">
-                    <div class="team-over">
-                        <ul>
-                            <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-pinterest-p"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                        </ul>
+                    <div class="team-inner">
+                        <img src="image/team2.jpg" alt="">
+                        <div class="team-over">
+                            <ul>
+                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-pinterest-p"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="team-text">
                         <h5>Christopher Campbell</h5>
                         <p>Branding/UX design</p>
                     </div>
                 </div>
-                <div class="team-item m-r">
-                    <img src="image/team3.jpg" alt="">
-                    <div class="team-over">
-                        <ul>
-                            <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-pinterest-p"></i></a></li>
-                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                        </ul>
+                <div class="team-item">
+                    <div class="team-inner">
+                        <img src="image/team3.jpg" alt="">
+                        <div class="team-over">
+                            <ul>
+                                <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-pinterest-p"></i></a></li>
+                                <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="team-text">
                         <h5>Michael Fertig</h5>
@@ -449,10 +457,12 @@
             </div>
             <div class="last">
                 <hr>
-                <p>© 2016 MoGo free PSD template by <span>Laaqiq</span></p>
+                <p>© 2016 MoGo free PSD template by <span>Imran</span></p>
             </div>
         </div>
     </footer>
     <!-- footer part end -->
+
+    <script src="js/custom.js"></script>
 </body>
 </html>
